--- a/ios/mishael_native/Info.plist
+++ b/ios/mishael_native/Info.plist
@@ -37,6 +37,10 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>we would like to access your calendar</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>we would like to access your reminders</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
